# moos-ivp-shane

./: 2  CMakeLists.txt  error.txt
missions/behavior2/pattern_s1/: .LastOpenedMOOSLogDirectory  alpha.bhv  alpha.moos  alpha.moos++
missions/behavior2/pattern_s2/: clean.sh  launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/behavior2/pattern_s3/: launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/behavior2/shell_script/: cmd_Line_ARG.sh  stradd.sh
missions/keelung_river/: gen_chirp.py  keelung.info  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_origin_warp.moos
missions/keelung_river/v1/: .LastOpenedMOOSLogDirectory  launch.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uProcessWatch.moos  targ_NTU_handsomest.moos  targ_shoreside.moos
missions/keelung_river/v2/: .LastOpenedMOOSLogDirectory  keelung_2.info  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_iM200.moos  plug_origin_warp.moos  plug_pHostInfo.moos  plug_uSimMarine.moos  shoreside_launch.sh  targ_NTU_handsomest.bhv  targ_NTU_handsomest.moos  targ_shoreside.moos  vehicle_launch.sh
missions/lab_07/1_alpha_mission/: .LastOpenedMOOSLogDirectory  alpha.moos  alpha.moos++
missions/lab_07/2_alpha_ReturnNow/: alpha.bhv  alpha.moos
missions/lab_07/2_alpha_assignment/: alpha.moos
missions/lab_07/3_bravo_assignment/: bravo.bhv  bravo.moos
missions/lab_07/4_bravo_dbl/: bravo.bhv  bravo.moos
missions/lab_07/5_bravo_uuv/: bravo.bhv  bravo.moos
missions/lab_07/6_bravo_uuv_surface/: .LastOpenedMOOSLogDirectory  bravo.bhv  bravo.moos  bravo.moos++  launch.sh
missions/lab_08/alpha_pshare/: alpha.bhv  alpha.moos  bravo.bhv  bravo.moos  hs_launch.sh  shoreside.moos
missions/lab_08/henry_gilda_auto_refuel/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_uFldNodeBroker.moos
missions/lab_08/henry_gilda_baseline/: .LastOpenedMOOSLogDirectory  launch.sh  targ_gilda.moos  targ_henry.moos  targ_shoreside.moos
missions/lab_08/henry_gilda_refuel/: meta_shoreside.moos  meta_vehicle.bhv
missions/lab_08/xrelay_pshare/: .LastOpenedMOOSLogDirectory  xrelay_Apples.moos  xrelay_Pears.moos
missions/lab_09/: .LastOpenedMOOSLogDirectory  all_launch.sh  clean.sh  genRandVar.moos  henry.bhv  henry.moos  henry.moos++  launch.sh  meta_shoreside.moos  meta_vehicle.moos  plug_pHelmIvp.moos  plug_pHostInfo.moos  plug_pLogger.moos  plug_pMarinePID.moos  plug_pNodeReporter.moos  plug_uProcessWatch.moos  plug_uSimMarine.moos  shane.bhv  shane.moos  shane.moos++  shor.moos  shor.moos++  targ_HENRY.moos  targ_SHANE.moos  targ_shoreside.moos  veh.moos
missions/lab_11/charlie_dana_message/: meta_shoreside.moos  meta_vehicle.moos
missions/lab_11/charlie_dana_reassign/: .LastOpenedMOOSLogDirectory  meta_shoreside.moos  meta_vehicle.moos  plug_uFldNodeBroker.moos  plug_uProcessWatch.moos  targ_charlie.moos  targ_dana.moos  targ_shoreside.moos
missions/lab_11_again/charlie_dana_message/: meta_shoreside.moos  meta_vehicle.moos
missions/lab_12/jake_kasper_baseline/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos
missions/lab_14/alpha_range_pulse/: alpha.bhv  alpha.moos
missions/lab_14/alpha_zigleg/: alpha.bhv  alpha.moos
missions/lab_14/test/: .LastOpenedMOOSLogDirectory  test.bhv  test.moos
missions/lab_17/front_estimate_SIL/: launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_iM200.moos  plug_pHelmIvP.moos  plug_uFldCTDSensor.moos  plug_uFldNodeBroker.moos  targ_shoreside.moos
missions/xing_rong_experiment/mission_xing_rong_v1/: launch.sh  (+5 more)
src/: CMakeLists.txt
src/lib_behaviors-shane/: BHV_Lawnmower.cpp  BHV_Polygon.cpp  BHV_Polygon.h  BHV_PolygonV2.cpp  BHV_PolygonV2.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  BHV_example.cpp  BHV_example.h  CMakeLists.txt
src/pAngleDecision/: AngleDecision.cpp  AngleDecision_Info.cpp  AngleDecision_Info.h  CMakeLists.txt  main.cpp
src/pAngleEstimate/: AngleEstimate.cpp  AngleEstimate.h  AngleEstimate_Info.cpp  AngleEstimate_Info.h  CMakeLists.txt  XYPointV2.cpp  XYPointV2.h  main.cpp  pAngleEstimate.moos
src/pChirp/: Chirp.cpp  Chirp.h  pChirp.moos
src/pController/: CMakeLists.txt  Controller.cpp  Controller.h  Controller_Info.cpp  Controller_Info.h  PID.cpp  PID.h  main.cpp  pController.moos
src/pGenPath/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  GenPath_back.cpp  GenPath_back.h  MyData.cpp  MyData.h  TSP.moos  main.cpp  pGenPath.moos  shor.moos  veh.moos
src/pNumberCal/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  MyData.cpp  MyData.h  NumberCal.cpp  NumberCal.h  NumberCal_Info.cpp  NumberCal_Info.h  main.cpp  pNumberCal.moos
src/pNumberCal/MOOSLog_2_11_2018_____15_55_33/: MOOSLog_2_11_2018_____15_55_33._moos  MOOSLog_2_11_2018_____15_55_33.alog  MOOSLog_2_11_2018_____15_55_33.ylog
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp  pOdometry.moos
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp  pPointAssign.moos
src/pPrimeFactor/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  MyData.cpp  MyData.h  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  main.cpp  pPrimeFactor.moos  pPrimeFactor_my.moos
src/pTest/: CMakeLists.txt  Test.h  Test_1.cpp
src/test/pNewmailIterate/: CMakeLists.txt  NewmailIterate.cpp  NewmailIterate.h  NewmailIterate_Info.cpp  NewmailIterate_Info.h  main.cpp  pNewmailIterate.moos
src/test/pTest/: Test.cpp  Test_Info.cpp  Test_Info.h  main.cpp  pTest.moos
src/test/pshoresideVehicle/: CMakeLists.txt  main.cpp  pshoresideVehicle.moos  shoreside.moos  shoresideVehicle.cpp  shoresideVehicle.h  shoresideVehicle_Info.cpp  shoresideVehicle_Info.h
src/test/pvehicle/: CMakeLists.txt  main.cpp  pvehicle.moos  vehicle.cpp  vehicle.h  vehicle.moos  vehicle_Info.cpp  vehicle_Info.h
src/uFldHazardMgrX/: HazardMgr.cpp  HazardMgr.h
(+70 files in other folders)
